--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
 
         <p><span>PHARRELLWILLIAMS.COM</span></p>
 
-        <a href="https://s3.amazonaws.com/learn-verified/columbia-logo.png"></a>
+        <img src="https://s3.amazonaws.com/learn-verified/columbia-logo.png">
 
         <p><span>COLUMBIARECORDS.COM</span></p>
 
         <br>
 
-        <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/sony-logo.png] -->
+        <img src="https://s3.amazonaws.com/learn-verified/sony-logo.png">
 
       </div>
     </div>
